[package]
name = "cargo-mach"
version = "0.1.2"
authors = ["sagudev <samo.golez@outlook.com>"]
edition = "2018"
description = "Cargo wrapper for mozillas mach"
repository = "https://github.com/sagudev/cargo-mach/"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
